# tinkoff_project

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  setup.cfg
app/: app.py  config.py  db.py  utils.py  workers.py
app/blueprints/: __init__.py  actions.py  problemset.py  users.py
app/codeforces_api/: __init__.py  utils.py
app/models/: __init__.py  base.py  problem.py  problemlink.py  problemset.py  submission.py  user.py
app/templates/: create_or_edit_problemset.html  create_or_update_problemset.html  create_problemset.html  index.html  problemset.html  problemsets.html  users.html
tests/: conftest.py  test_app.py
tests/sources/: problems.txt  submissions.txt
