[tool.poetry]
name = "homework8"
version = "1.0.0"
description = "Codeforces Problemsets Manager"
authors = ["Anton Naumtsev <naumtsev.ant@yandex.ru>"]
packages = [
  {include = "app"},
]


[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.36"
requests = "^2.27.1"
grequests = "^0.6.0"
Flask = "^2.1.2"
Pillow = "^9.1.0"
APScheduler = "^3.9.1"
Flask-Cache = "^0.13.1"
types-requests = "^2.27.25"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
